[tool.poetry]
name = "deming"
version = "0.1.3"
description = "W Edwards Deming Quality Control Charts"
authors = ["Abhi Yerra <abhi@opszero.comt>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
kaleido = "1.0.0"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
